threads backend and front end working

--- a/front-end/views/forum.html
+++ b/front-end/views/forum.html
@@ -1,11 +1,11 @@
 
-<link href=".css/forum.css" rel="stylesheet">
+<link href="css/forum.css" rel="stylesheet">
 
 <!--beginning of forum page-->
 
 <div class="forum-container col-xs-12 col-md-12">
     <h2>Forum</h2>
-    <button type="button"  class="create-forum btn btn-default">+ Create</button>
+    <a  href="#/createThread"><button type="button" class="create-forum btn btn-default">+ Create</button> </a>
     <div class="listed-forum col-xs-10 col-md-10">
         <div class="row">
             <ul class="nav-tabs col-xs-4 col-md-4">
